# wrish

./: .gitignore  .wrishrc  LICENSE  MUSH.md  Makefile  Manifest.toml  README.md  a.exp  a.txt  o.txt  pyproject.toml
devices/: C60-A82C.md
devices/C60-A82C/: C60-A82C.md  battery.py  call.py  health.py
devices/ID115/: ID115.md
docs/: btproxy.yml  hookpool-http-relay.md
src/: bluetooth.sh  c60_a82c.sh  call.py  find.py  gatt.sh  gatttool.sh  main.sh  notify.py  proxy.py  router.sh  sms.py  utils.sh
src/devices/: c60_a82c.sh  module.sh
tests/: raw_info.sh  test_info.sh  test_preflight.py  test_sentinel_recovery.py
tests/files/: a.txt
wrish/: __init__.py  _sentinel.py  cli.py  concurrency.py  config.py  relay.py  systemd.py
wrish/devices/: __init__.py  c60_a82c.py
wrish/devices/c60_a82c/: __init__.py  _bluez.py  _constants.py  _device.py  _dialer.py  _health.py  _protocol.py
